- Small updates to supplementary documents

--- a/Ullrich-MountainSnowpack-BiographicalSketch.tex
+++ b/Ullrich-MountainSnowpack-BiographicalSketch.tex
@@ -17,7 +17,9 @@
 
 \begin{document}
 
-\setcounter{section}{3}
+\appendix
+
+\setcounter{section}{5}
 
 \section{\textbf{Biographical Sketch - Dr. Paul Ullrich (PI)}}
 \begin{center}
