--- a/Ullrich-MountainSnowpack-DataManagement.tex
+++ b/Ullrich-MountainSnowpack-DataManagement.tex
@@ -22,7 +22,7 @@
 
 \section{Data Management and Communication}
 
-Data from both the WRF run and VRGCM runs will be post-processed and made available for future use via the Earth System Grid \citep{williams2009earth}. This archive allows for public access to model output from all simulations and consequently allows for these results to be leveraged for future study.  The data will be post-processed and made available in different temporal resolutions (i.e. daily, monthly, seasonal, and climate) using the Climate Data Operators (CDO) and NetCDF Operators (NCO) \citep{schulzweida2007cdo,zender2006netcdf}.
+Data from both the WRF runs and VRGCM runs will be post-processed and made available for future use via the Earth System Grid \citep{williams2009earth}. This archive allows for public access to model output from all simulations and consequently allows for these results to be leveraged for future study.  The data will be post-processed and made available in different temporal resolutions (i.e. daily, monthly, seasonal, and climate) using the Climate Data Operators (CDO) and NetCDF Operators (NCO) \citep{schulzweida2007cdo,zender2006netcdf}.
 
 In addition, the research team will reach out to boundary organizations such as the UC Davis Policy Institute for Energy, Environment, and the Economy, the California Climate Assessment, the MIT Joint Program on the Science and Policy of Global Change, the Chilean-UC Davis Collaborative Global Change Center, and the UC Life and Innovation Center (all of which the team has personal correspondence with) to share model methods, results, and tools and discuss how the information may be used within a climate policy and/or water management perspective.  Moreover, additional research questions and key management and/or policy hydroclimate metrics will be generated in collaboration with network collaborators, to inform future research avenues.  The establishment of these interdisciplinary communication pathways will be an integral training outcome for the graduate student researcher and enhance both their ability to work across sectors and communicate scientific outcomes in non-technical (yet informative) means.  Further, the hope is that this project will lead to more scientifically informed political decisions that are made in cooperative understanding with science, rather than today's conventional isolation.  
 
