Further Updates to Project Description and BibTex - 1/22/15

--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -1,3 +1,131 @@
+@article{pavelsky2012changes,
+  title={Changes in orographic precipitation patterns caused by a shift from snow to rain},
+  author={Pavelsky, Tamlin M and Sobolowski, Stefan and Kapnick, Sarah B and Barnes, Jason B},
+  journal={Geophysical Research Letters},
+  volume={39},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{pavelsky2011accumulation,
+  title={Accumulation and melt dynamics of snowpack from a multiresolution regional climate model in the central Sierra Nevada, California},
+  author={Pavelsky, Tamlin M and Kapnick, Sarah and Hall, Alex},
+  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  volume={116},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{zhao2011impactb,
+  title={The impact of climate change on air quality-related meteorological conditions in California. Part II: Present versus future time simulation analysis},
+  author={Zhao, Zhan and Chen, Shu-Hua and Kleeman, Michael J and Mahmud, Abdullah},
+  journal={Journal of climate},
+  volume={24},
+  pages={3362--3376},
+  year={2011}
+}
+
+@article{zhao2011impacta,
+  title={The impact of climate change on air quality-related meteorological conditions in California. Part I: present time simulation analysis},
+  author={Zhao, Zhan and Chen, Shu-Hua and Kleeman, Michael J and Tyree, Mary and Cayan, Dan},
+  journal={Journal of Climate},
+  volume={24},
+  pages={3344--3361},
+  year={2011}
+}
+
+@article{pan2011influences,
+  title={Influences of climate change on California and Nevada regions revealed by a high-resolution dynamical downscaling study},
+  author={Pan, Lin-Lin and Chen, Shu-Hua and Cayan, Dan and Lin, Mei-Ying and Hart, Quinn and Zhang, Ming-Hua and Liu, Yubao and Wang, Jianzhong},
+  journal={Climate dynamics},
+  volume={37},
+  pages={2005--2020},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{silverman2013dynamically,
+  title={Dynamically downscaled winter precipitation over complex terrain of the Central Rockies of Western Montana, USA},
+  author={Silverman, NL and Maneta, MP and Chen, S-H and Harper, JT},
+  journal={Water Resources Research},
+  volume={49},
+  pages={458--470},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{chen2011observing,
+  title={Observing System Simulation Experiment: Development of the system and preliminary results},
+  author={Chen, Shu-Hua and Chen, Jhih-Ying and Chang, Wei-Yu and Lin, Pay-Liam and Lin, Po-Hsiung and Sun, Wen-Yih},
+  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  volume={116},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{zhang2014development,
+  title={Development of a source oriented version of the WRF/Chem model and its application to the California regional PM 10/PM 2.5 air quality study},
+  author={Zhang, H and DeNero, SP and Joe, DK and Lee, H-H and Chen, S-H and Michalakes, J and Kleeman, MJ},
+  journal={Atmospheric Chemistry and Physics},
+  volume={14},
+  pages={485--503},
+  year={2014},
+  publisher={Copernicus GmbH}
+}
+
+@article{yang2014evaluating,
+  title={Evaluating the impact of the COSMIC RO bending angle data on predicting the heavy precipitation episode on 16 June 2008 during SoWMEX-IOP8},
+  author={Yang, Shu-Chih and Chen, Shu-Hua and Chen, Shu-Ya and Huang, Ching-Yuang and Chen, Ching-Sen},
+  journal={Monthly Weather Review},
+  volume={142},
+  pages={4139--4163},
+  year={2014}
+}
+
+@article{xu2014coupling,
+  title={Coupling the high complexity land surface model ACASA to the mesoscale model WRF},
+  author={Xu, L and Pyles, RD and Paw U, KT and Chen, SH and Monier, E},
+  journal={Geoscientific Model Development Discussions},
+  volume={7},
+  pages={2829--2875},
+  year={2014}
+}
+
+@article{rutz2014climatological,
+  title={Climatological characteristics of atmospheric rivers and their inland penetration over the western United States},
+  author={Rutz, Jonathan J and Steenburgh, W James and Ralph, F Martin},
+  journal={Monthly Weather Review},
+  volume={142},
+  pages={905--921},
+  year={2014}
+}
+
+@article{gimeno2014atmospheric,
+  title={Atmospheric rivers: a mini-review},
+  author={Gimeno, Luis and Nieto, Raquel and V{\'a}zquez, Marta and Lavers, David A},
+  journal={Atmospheric Science},
+  volume={2},
+  pages={2},
+  year={2014},
+  publisher={Frontiers}
+}
+
+@article{leung2009atmospheric,
+  title={Atmospheric rivers induced heavy precipitation and flooding in the western US simulated by the WRF regional climate model},
+  author={Leung, L Ruby and Qian, Yun},
+  journal={Geophysical research letters},
+  volume={36},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{chen2014modeling,
+  title={Modeling seasonal snowpack evolution in the complex terrain and forested Colorado Headwaters region: A model intercomparison study},
+  author={Chen, Fei and Barlage, Michael and Tewari, Mukul and Rasmussen, Roy and Jin, Jiming and Lettenmaier, Dennis and Livneh, Ben and Lin, Chiyu and Miguez-Macho, Gonzalo and Niu, Guo-Yue and others},
+  journal={Journal of Geophysical Research: Atmospheres},
+  year={2014},
+  publisher={Wiley Online Library}
+
 @article{serreze1999characteristics,
   title={Characteristics of the western United States snowpack from snowpack telemetry (SNOTEL) data},
   author={Serreze, Mark C and Clark, Martyn P and Armstrong, Richard L and McGinnis, David A and Pulwarty, Roger S},
