--- a/Ullrich-MountainSnowpack-ProjectDescription.tex
+++ b/Ullrich-MountainSnowpack-ProjectDescription.tex
@@ -33,15 +33,15 @@
 
 \usepackage[margin=1in]{geometry}
 
-%\title{\textbf{Modeling the Effect of Regional Climate Change in the Western USA: An Assessment of Mountain Snowpack}}
+\title{\textbf{Understanding Hydroclimatic Trends in 21st Century Western US Mountain Snowpack using Variable-Resolution Global Climate Models}}
 
 %\author{Dr. Paul Ullrich (PI)}
-%\date{ }
+\date{ }
    
 \begin{document}
 
 
-%\maketitle
+\maketitle
 
 %\tableofcontents
 %\newpage
@@ -50,13 +50,13 @@
 \subsection{Background and Summary}
 The next century will see unprecedented changes to the climate system. The most well understood trends (such as increasing global surface temperature) are of a broad global nature and do not necessarily reflect changes on regional scales, which are key for planning on all levels. For this reason, developing a scientific understanding of changing regional climate is an unmet challenge that must be addressed. Regional climate change is particularly important to California, one of the most environmentally and agriculturally diverse regions in the world. With around two-thirds of California's developed water supply originating from the Sierra Nevada, there is growing concern that climate change will directly alter this natural reservoir of water.  The primary source of freshwater from this region comes in the form of winter snowpack.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will assuredly stem late summer water flow that is integral to maintaining agricultural, environmental, and municipal water needs.  Modeling snowpack accurately requires the need for high model resolution to represent large-scale and convective snow systems, topography (with resulting orographic forcing and snow line representation), and the overall fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
 \\\\
-The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, specifically water associated with mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  In order to address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  A unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.
+The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, specifically water associated with mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  In order to address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  We recognize that quite a few studies to date have utilized regional and global climate models to address the aforementioned water security concerns, however a unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.  The major benefits of this framework is the ability to dynamically simulate global circulations (eliminating bias from conventional boundary conditions), represent features such as topography and key teleconnection features (e.g. atmospheric rivers) in a much more resolved manner, and do so in a computationally cost efficient manner that lends itself to smaller server allocation research ($<$100 nodes). 
 \\\\
 The key \textbf{scientific questions} that will be addressed by this proposal are as follows:
 
 \vspace{-0.4cm}
 \begin{itemize}
-\item[(Q1)] How accurately do VRGCMs represent the timing of snowfall?  How accurately do VRGCMs represent the spatial distribution, depth, total Snow Water Equivalent (SWE) and melt rate of snowpack throughout the western US?  How sensitive are these indicators to the the underlying grid resolution?
+\item[(Q1)] How accurately do VRGCMs represent the timing of snowfall?  How accurately do VRGCMs represent the spatial distribution, depth, total Snow Water Equivalent (SWE) and melt rate of snowpack throughout the western US?  How sensitive are these indicators to the underlying grid resolution?
 
 \item[(Q2)] Quantitatively, how will west coast mountain snowpack (both total snowpack and on the scale of specific basins) be affected by future climate?  How will interannual variability be affected?
 
@@ -69,9 +69,9 @@ The key \textbf{scientific questions} that will be addressed by this proposal ar
 
 \vspace{-0.4cm}
 \begin{itemize}
-\item[(H1)] VRGCMs are a statistically informative and cost-effective method to characterize snowfall and snowpack trends within the Sierra Nevada (and western USA) compared to conventional standard resolution general circulation model runs used by the Intergovernmental Panel on Climate Change (IPCC) and downscaled regional climate model simulations.
+\item[(H1)] VRGCMs are a statistically informative and cost-effective method to characterize snowfall, snowpack, and teleconnection trends within the Sierra Nevada (and western USA) compared to conventional standard resolution general circulation model runs used by the Intergovernmental Panel on Climate Change (IPCC) and downscaled regional climate model simulations.
 \item[(H2)] Sierra Nevada snowpack trends will see a significant decline in the coming century, with a shift towards more rain and less snow, earlier peak accumulation and melt onset, and more dramatic impacts felt on lower elevation basins.
-\item[(H3)] Atmospheric rivers and, consequently, precipitation will experience a poleward shift in response to changes in the general circulation.
+\item[(H3)] Atmospheric rivers and, consequently, precipitation will be better represented within the VRGCM framework as it has vastly improved dynamical resolution and topographical representation than conventional GCMs.  We posit that this will lead to better characterization of mean atmospheric river event landfall location, precipitation intensity, duration, and type (especially snowfall).  Further, we expect the 21st century will see a poleward shift in precipitation due to changes in the general circulation brought about by climate change.  
 \end{itemize}
 
 \vspace{-0.4cm}
@@ -111,7 +111,7 @@ The PI and his collaborating team are uniquely positioned to conduct multi-model
 
 This project will further benefit from PI Ullrich's experience with atmospheric model development  \cite{ullrich2010high, PHLPAURDN2011SPRINGER, ullrich2012operator, ullrich2012mcore, ullrich2014fluxform, guba2014viscosity, ullrich2014understanding, ullrich2014global}, numerical analysis \cite{ullrich2011analysis, ullrich2012considerations} and model evaluation \cite{DCMIP2012TESTCASES, ullrich2014proposed, kent2013dynamical, ullrich2014baroclinic}.  PI Ullrich has been heavily involved with work on variable-resolution modeling \citep{zarzycki2014aquaplanet} and adaptive mesh refinement  \citep{collins2013nonhydrostatic, mccorquodale2014adaptive}. He is heavily involved in national collaborations on climate projects, and is an organizer on a number of sessions and workshops which are related to atmospheric modeling. In addition, he is closely affiliated with ongoing climate research efforts at Lawrence Berkeley National Laboratory (LBNL) and the National Center for Atmospheric Research (NCAR).
 
-Dr.  Shu-Hua Chen (UC Davis) has extensive experience with using WRF for regional atmospheric modeling and so will be a valuable collaborator towards the completion of this project. She will be assisting with the use of WRF for simulating the snowpack, as well as coupling WRF to the CESM ensemble data. {\color{red}[More here]}
+Dr. Shu-Hua Chen (UC Davis) has extensive experience with using WRF for regional atmospheric modeling (\cite{chen2011observing,xu2014coupling, yang2014evaluating, zhang2014development}) and so will be a valuable collaborator towards the completion of this project. She will be assisting with the use of WRF for simulating the snowpack, as well as coupling WRF to the CESM ensemble data.  Chen also has dynamical downscaling experience using the WRF model. Her experience includes using dynamic downscaling data to study variation in precipitation over the Sierra Nevada Mountains and Western Montana (\cite{pan2011influences, silverman2013dynamically}) and the trend of air pollution episodes in California (\cite{zhao2011impactb, zhao2011impacta}) under climate change. The interface between WRF and CESM has been developed and validated in her previous work and will be used in this project.
 
 %This award will also provide a framework for future variable-resolution intercomparison studies and an improved understanding of hydroclimate effects facing California (and the broader western USA).
 
@@ -123,13 +123,12 @@ With global high-resolution modeling being prohibitively expensive, the National
 
 \subsubsection{Mountain Snowpack}
 
-Regional climate change is particularly important to California, one of the most biologically and environmentally diverse regions in the world. The agricultural industry in California is responsible for roughly 50 percent of the nation's fruit and vegetable production, and is particularly susceptible to extreme weather events and sudden changes in regional climate.  Snowpack is a crucial natural reservoir for both the western US (75 percent of the freshwater supply) and California (33 percent of the freshwater supply) \citep{cayan1996interannual}.  Western US summers are typically dry and snowpack storage is critical for water use in agricultural, environmental, and municipal sectors during these arid months \citep{dettinger1995large, mote_declining_2005, maurer2007detection}.  Recent trends in water availability have projected a potentially significant loss of agricultural water associated with loss of snow melt \citep{dyer2006spatial}. In particular, the 2013-2014 snow season was one of the driest years on record in California (one-fifth of normal), with water reserves at record lows, resulting in repercussions that were felt throughout the California Central Valley agricultural communities.
+Regional climate change is particularly important to the western USA and California, a semi-arid and extremes driven climate.  The extreme natural variability of this region, coupled with climate change and land use changes, is particularly important from a food security perspective as the agricultural industry in California is responsible for roughly 50 percent of the nation's fruit and vegetable production.  A natural stabilizing buffer for the extreme nature of the region comes in the form of snowpack. Snowpack provides a crucial natural reservoir in the western US (75 percent of the freshwater supply) and California (33 percent of the freshwater supply) \citep{cayan1996interannual}.  Western US summers are typically dry and snowpack storage is critical for water use in agricultural, environmental, and municipal sectors during these arid months \citep{dettinger1995large, mote_declining_2005, maurer2007detection}.  Recent trends in water availability have projected a potentially significant loss of agricultural water associated with loss of snow melt \citep{dyer2006spatial}. In particular, the 2013-2014 snow season was one of the driest years on record in California (one-fifth of normal), with water reserves at record lows, resulting in repercussions that were felt throughout the California Central Valley agricultural communities.
 
 %Regional climate change is particularly important to California, one of the most biologically and environmentally diverse regions in the world. The agricultural industry in California is responsible for roughly 50 percent of the nation's fruit and vegetable production, and is particularly susceptible to extreme weather events and sudden changes in regional climate. Western mountain snowpack is a crucial reservoir for precipitation from California's wet winters (providing 75 percent of freshwater supplies), and is an important mechanism for the gradual release of this water during the typically dry summer \citep{cayan1996interannual}. In particular, summer snowmelt is an incredibly important source of agricultural water \citep{dettinger1995large, mote_declining_2005, maurer2007detection}. Recent trends in water availability have projected a potentially significant loss of agricultural water associated with loss of snow melt \citep{dyer2006spatial}. In particular, the 2013-2014 snow season was one of the driest years on record in California (one-fifth of normal), with water reserves at record lows, resulting in repercussions that were felt throughout the California Central Valley agricultural communities.
 
-Climate change directly impacts mountain snowpack via two avenues: First, warming temperatures lead to an earlier spring thaw, increasing runoff associated with spring melt and decreasing late summer water availability due to early depletion of snowpack. Second, warmer air holds more water and so leads to an increase in both large-scale and convective precipitation, although warmer temperatures also tends to favor rainfall over snowfall. Anomalous warm temperatures are particularly important in the spring at mid- to high-elevations, which would normally be below freezing throughout the winter period \citep{cayan1996interannual,stewart2009changes}. Evidence of climate change on mountain snowpack in the western US has primarily been served via empirical studies focused on April 1st measured snow depth, which has suggested there is clear evidence of a decline in snowpack throughout the western US everywhere except in the southern Sierra Nevadas \citep{mote_declining_2005}. Accumulation in this region has been attributed to an increase in the strength of the North American monsoon \citep{dyer2006spatial}. Other studies have corroborated this conclusion \citep{dettinger1995large,mote_declining_2005,knowles2006trends} and suggested that warming of the Earth's climate will lead to a continual decline in snow resources. Further, many of these studies have demonstrated that \textit{although the trends presented here may be partially attributable to interdecadal climate variability associated with the Pacific decadal oscillation, they also appear to result from still longer-term climate shifts} \citep{knowles2006trends}. Current trends suggest that there will be a continued decline in mountain snowpack \citep{stewart2009changes}. Regions for which the hydrological cycle is dependent on the availability of water resources originating from melting snow or ice are expected to be particularly hard hit, with potentially dramatic effects on ecology and agriculture \citep{barnett2005potential}.
-
-In order to obtain a robust prediction of snow water availability in the next century, global atmospheric models must be used to capture the long time scales associated with the changing climate.  However, mountain snow cover exhibits fractal-like characteristics and strong topographical dependence that makes it difficult to capture at the typical resolutions of global models. Consequently, an accurate treatment of snowpack requires grid resolution which is much finer than modern global models can produce. Hence either using dynamical downscaling to a high resolution regional model, such as the Weather Research and Forecasting (WRF) model \citep{michalakes2001development}, or a global model that captures different spatial scales, such as a VRGCM, is necessary to study modeled snowpack in a global context.
+Climate change directly impacts mountain snowpack via two avenues: First, warming temperatures lead to an earlier spring thaw, increasing runoff associated with spring melt and decreasing late summer water availability due to early depletion of snowpack. Second, warmer air holds more water leading to potential regional increases in both large-scale and convective precipitation in areas with forced orographic uplift (e.g. mountain ranges of the western USA), although warmer temperatures also tend to favor rainfall over snowfall. Anomalous warm temperatures are particularly important in the spring at mid- to high-elevations, which would normally be below freezing throughout the winter period \citep{cayan1996interannual,stewart2009changes}. Evidence of climate change on mountain snowpack in the western US has primarily been served via empirical studies focused on April 1st measured snow depth, which has suggested there is clear evidence of a decline in snowpack throughout the western US everywhere except in the southern Sierra Nevadas \citep{mote_declining_2005; bales2006mountain}. Accumulation in this region has been attributed to an increase in the strength of the North American monsoon \citep{dyer2006spatial}. Other studies have corroborated this conclusion \citep{dettinger1995large,mote_declining_2005,knowles2006trends} and suggested that warming of the Earth's climate will lead to a continual decline in snow resources. Further, many of these studies have demonstrated that \textit{although the trends presented here may be partially attributable to interdecadal climate variability associated with the Pacific decadal oscillation, they also appear to result from still longer-term climate shifts} \citep{knowles2006trends}. Current trends suggest that there will be a continued decline in mountain snowpack \citep{stewart2009changes}. Regions for which the hydrological cycle is dependent on the availability of water resources originating from melting snow or ice are expected to be particularly hard hit, with potentially dramatic effects on ecology and agriculture \citep{barnett2005potential}.
+In order to obtain a robust prediction of snow water availability in the 21st century, global atmospheric models must be used to capture the long time scales associated with the changing climate.  However, mountain snow cover exhibits fractal-like characteristics and strong topographical dependence that makes it difficult to capture at the typical resolutions of global models, as depicted in our preliminary findings in Figure \ref{fig:VarResSWE}.  This was further shown in \cite{pavelsky2011accumulation} and \cite{pavelsky2012changes}, using the WRF regional model, where the authors found that topographical resolutions $>$27km couldn't accurately resolve winter snowpack nor the necessary orographic uplift to alter mountain precipitation phase from rain to snow. Consequently, an accurate treatment of snowpack requires grid resolution which is much finer than modern global models can produce, due in large part to computational restraints. Hence either using dynamical downscaling to a high resolution regional model, such as the Weather Research and Forecasting (WRF) model \citep{michalakes2001development}, or a global model that captures different spatial scales, such as a VRGCM, is necessary to study modeled snowpack in a global context.
 
 \subsubsection{Observational datasets} \label{sec:ObservationalData}
 
@@ -164,7 +163,7 @@ The Canadian Meteorological Centre (CMC) SNOWDP dataset is comprised of surface 
 
 The Community Earth-System Model (\citet{hurrell2013community}) is a state-of-the-art Earth modeling framework, consisting of atmospheric, oceanic, land and sea ice components. This framework has been under development for nearly two decades, and has been used heavily in better understanding the effects of global climate change. The Community Atmosphere Model (CAM, the atmospheric component of CESM) is further broken into two components: the dynamical core, which solves the 3-D primitive equations of motion for the atmosphere, and the physics parameterization suite, which incorporates processes that occur on scales below the model grid scale. Because of its modular nature, CAM currently allows for switching between four dynamical cores, including the finite-volume, semi-Lagrangian, Eulerian and spectral element dynamical cores, with work underway for the inclusion of others in the near future. Of these four, only one dynamical core has variable-resolution capability, namely the CAM spectral element (SE) dynamical core (CAM-SE).
 
-The spectral element method has several important properties including parallel scalability, flexibility and accuracy, that make it a desirable choice for modeling atmospheric dynamics.  The spectral element dynamical core \citet{fournier2004spectral, taylor2010compatible} is now the default dynamical core in CAM and so is a supported platform for scientific research. Recently CAM-SE has added variable-resolution support which allows for coupled climate simulations in CAM on a variable-resolution atmospheric mesh. The mesh must be conformal, so each edge is shared by exactly two quadrilateral spectral elements. 
+The spectral element method has several important properties including parallel scalability, flexibility and accuracy, that make it a desirable choice for modeling atmospheric dynamics.  The spectral element dynamical core (\citet{fournier2004spectral, taylor2010compatible}) is now the default dynamical core in CAM and so is a supported platform for scientific research. Recently CAM-SE has added variable-resolution support which allows for coupled climate simulations in CAM on a variable-resolution atmospheric mesh. The mesh must be conformal, so each edge is shared by exactly two quadrilateral spectral elements. 
 
 The adoption of mesh refinement in the global atmospheric modeling community is fairly recent, although a number of major modeling centers are currently pushing this capability to operational general circulation models \cite{skamarock2012mpas, LMHSJL2013MWR, CMZCJMAT2013MWR, mccorquodale2014adaptive}.   Nonetheless, static mesh refinement has been demonstrated to be effective for operational modeling of tropical cyclones \cite{zarzycki2014multidecadal, zarzycki2014using}, large-scale weather systems \cite{rauscher2014impact} and regional climate \cite{rauscher2013exploring, zarzycki2014aquaplanet}.
 
@@ -253,7 +252,7 @@ Using the ensemble of model simulations, snowpack information (seasonally averag
 
 \subsubsection{(T2) Analysis of the Community Land Model}
 
-SNOTEL stations are perhaps the most reliable resource for mountain snowpack measurements, but their distribution and altitude is not representative of the element-averaged values provided by model simulations.  Nonetheless, as a column model, CLM is theoretically capable of assessing snowpack at pointwise locations when driven by model meteorology.  Consequently, towards the goal of evaluating the capability of the model to match observational data, this proposal will assess the ability of CLM to match SNOTEL measurements over the validation period (1980-2005) when driven by both observed meteorology and interpolated meteorology from variable-resolution simulations.  Mean snow depth and SWE will be assessed.  {\color{red} [More here from Mark Flanner?]}
+SNOTEL stations are perhaps the most reliable resource for mountain snowpack measurements, but their distribution and altitude is not representative of the element-averaged values provided by model simulations.  Nonetheless, as a column model, CLM is theoretically capable of assessing snowpack at pointwise locations when driven by model meteorology.  Consequently, towards the goal of evaluating the capability of the model to match observational data, this proposal will assess the ability of CLM to match SNOTEL measurements over the validation period (1980-2005) when driven by both observed meteorology and interpolated meteorology from variable-resolution simulations.  The VRGCM framework allows us to better alleviate the misrepresentation of observed versus modeled altitude and thus gives us an opportunity to better isolate the models ability to simulate variables such as mean snow depth and SWE.  Recently, an intermodel pointwise validation experiment was conducted for SWE in the Rocky Mountains using six land surface models \citep{chen2014modeling}.  This proposal will learn from and build upon this research by using the newest versions of CLM (CLM4.0 and CLM4.5) and analyze different mountain basins (e.g. Sierra Nevada) {\color{red} [More here from Mark Flanner?]}
 
 \subsubsection{(T3) VRGCM Predictive Simulations (2040-2060 and 2080-2100)}
 
@@ -267,7 +266,7 @@ The analysis will be analogous to the model validation tasks (T1), although in t
 
 %\begin{table}[t1]
 %\begin{center}
-%\caption{Predictive experiments for the VRGCM simulation over the 2025-2050 simulation period}
+%\caption{Predictive experiments for the VRGCM simulation over the 2040-2060 and 2080-2100 simulation period}
 %\vspace{0.3cm}
 %\begin{tabular}{|l|r|r|} \hline
 %Experiment & Climate Forcing & Sea-Surface \\\hline
@@ -283,7 +282,7 @@ The analysis will be analogous to the model validation tasks (T1), although in t
 
 \subsubsection{(T4) Detection and Characterization of Atmospheric Rivers}
 
-Atmospheric rivers (ARs) are meteorological phenomena characterized by long, narrow plumes of increased atmospheric moisture stretching between the subtropics and the midlatitudes regions.  These features are responsible for 30\%-50\% of total US west coast precipitation, particularly during winter months, and 30\%-40\% of total seasonal SWE \citep{dettinger2011atmospheric}.  The majority of total seasonal SWE contribution from ARs will often occur as a result of 1-2 extreme AR events \citep{guan2010extreme}.  ARs are usually between 400 to 600\ km wide, and so at global model resolutions of $1^\circ$ are mostly unresolved, occupying as few as four grid cells in the latitudinal direction.  The variable-resolution simulations performed under research tasks (T1) and (T3) will be invaluable to the study of these features: Not only will atmospheric rivers be much better resolved at 28km and 14km resolution, but the variable-resolution grids used in this study (see Figure \ref{fig:CESMVarResMeshes}) have been designed to represent a swath of the eastern Pacific that is most relevant for the study of these features.  Specifically, this proposal will utilize the higher model resolution achieved in the variable-resolution framework to determine how ARs will respond to changes in circulation and how major snowfall events associated with ARs will change under future climate.
+Atmospheric rivers (ARs) are meteorological phenomena characterized by long, narrow plumes of increased atmospheric moisture stretching between the subtropics and the midlatitudes regions.  These features are responsible for 30\%-50\% of total US west coast precipitation, particularly during winter months, and 30\%-40\% of total seasonal SWE \citep{dettinger2011atmospheric}.  The majority of total seasonal SWE contribution from ARs will often occur as a result of 1-2 extreme AR events \citep{guan2010extreme}.  ARs are usually between 400 to 600\ km wide and last for 20-40 hours (\cite{gimeno2014atmospheric}), so using conventional global model simulations resolutions of $1^\circ$ are mostly unresolved, both spatially and temporally, occupying as few as four grid cells in the latitudinal direction.  The variable-resolution simulations performed under research tasks (T1) and (T3) will be invaluable to the study of these features: Not only will atmospheric rivers be much better resolved at 28km and 14km resolution, but the variable-resolution grids used in this study (see Figure \ref{fig:CESMVarResMeshes}) have been designed to represent a swath of the eastern Pacific that is most relevant for the study of these features.  In addition, coastal topography will be much better represented than in previous hindcast and future scenario simulations.  Topographical forcings on atmospheric rivers can't be understated (\cite{leung2009atmospheric, dettinger2011atmospheric, rutz2014climatological, gimeno2014atmospheric}) and were identified as a major assumption and limitation in characterizing atmospheric rivers, and their precipitation deposition location, intensity, and type, in the CMIP5 simulations (and conventional GCMs in general) \citep{dettinger2011atmospheric}.  Specifically, this proposal will utilize the higher model resolution achieved in the variable-resolution framework to determine how ARs will respond to changes in circulation and how major snowfall events (and snowpack accumulation patterns) associated with ARs will change under future climate.
 
 This proposal will use automated atmospheric river detection and characterization for understanding AR events in the variable-resolution data \citep{ralph2004satellite, lavers2012detection}.  The characterization of atmospheric rivers will be based on \cite{neiman2008meteorological} and \cite{guan2010extreme}, who use column-integrated water vapor to identify filamentary structures over the eastern Pacific.  The capability to detect these structures will utilize technology from the TempestExtremes software package, a new suite of flexible detection and characterization algorithms developed by the PI for processing large climate datasets.  AR structures will be agglomerated in space using a graph traversal algorithm, and then connected in time by determining overlaps in detections at adjacent time points.  Discrete AR events will then be characterized in terms of point of landfall and total associated precipitation (rainfall and snowfall).  Statistics will then be computed on these quantities including proportion of precipitation associated with AR events, frequency of AR events and mean spatial point of landfall.  This information will then be used for addressing both sensitivity of AR events to grid resolution (using 110km, 28km and 14km datasets) and changes to AR events under future climatology.
 
@@ -320,7 +319,7 @@ We expect results and research progress will be presented at regular scientific 
 
 \subsubsection{Prior NSF Support}
 
-{\color{red}[From Shu-Hua]}
+N/A
 
 \bibliographystyle{ametsoc2014}  
 {\setbox0\vbox{\bibliography{MountainSnowpack}}}
